Version 0.12 (TBA)
==================

 * Features run all the way through again, and can be run in the background 
   (the test window no longer needs to be focussed) (Dan Lucraft)
 * Added --no-splash option (Dan Lucraft)
 * Fix runnables for JRuby 1.6.1 (Chris Nelson)
 * Improved developer first experience (Dr Nic Williams)
 * Improved after install instruction language (Jeff Casimir)

Version 0.11 (23 March 2011)
============================

Enhancements:

 * Project search backed by Lucene (Dan Lucraft)
 * Fuzzy file finder now recognizes directories "a/c/repocontr" (Tim Felgentreff)
 * Recent project fuzzy finder (Benedikt Müller)
 * Improved DocumentSearch, with UI refinements, added Replace All commands (Tom Murray)
 * Raise/lower region behaves better when you select multiple lines (Benedikt Müller)
 * Which files are hidden in a project is now configurable (Konstantin Haase)
 * Added logger at Redcar.log, goes to ~/.redcar/user.log (Dan Lucraft)
 * Can hide files and directories from the project context menu (Benedikt Müller)
 * Notification if Redcar doesn't have permission to save files (Benedikt Müller & Bill Siggelkow)
 * Tweaked the load order to make the window appear faster during startup (Dan Lucraft)
 * All the plugins use a single preference value to ignore files (Benedikt Müller & Daniel Lucraft)
 * Can ignore directories (Benedikt Müller)
 * User definable keybindings (Chris Nelson)

Bugfixes:
 * Fixed Unicode problems in DocumentSearch (Tom Murray)
 * You can now symlink bin/redcar (Konstantin Haase)
 * Runnables are now terminated correctly when the tab is closed (Dan Lucraft)
 * You are once again prompted when you close a window with running Runnables in (Dan Lucraft)
 * Fix encoding issue that broke highlighting when there are multi-byte characters in a line (Dan Lucraft)
 * Fixed project-dependent trees remaining open when project is closed (Delisa Mason)

Version 0.10 (17 January 2011)
==============================

Enhancements:
